# xpublish-tiles

./: .pre-commit-config.yaml  .test_durations  CLAUDE.md  README.md  datashader_polygons_reproducer.py  pyproject.toml
.github/workflows/: dataset-creation.yml  integration-tests.yml  pre-commit.yml  publish.yml  test.yml
docs/: fvcom_visualization.ipynb
docs/superpowers/plans/: 2026-05-27-ugrid-support.md
docs/superpowers/specs/: 2026-05-27-ugrid-support-design.md
examples/: radar_swath_example.py
examples/mapbox/: README.md  index.html  tilejson-advanced.html  tilejson.html  tiles-categorical.html  tiles-projected.html  tiles.html  wms-tiled.html
examples/maplibre/: README.md  tiles-multiscale.html  tiles-vector-points.html  tiles-vector.html  tiles.html
plans/: odd-coarsen-plan.md
scripts/: renderbench.py
src/xpublish_tiles/: __init__.py  config.py  datasets.py  expressions.py  grids.py  grids_swath.py  lib.py  logger.py  multiscale.py  pipeline.py  plugin.py  tiles_lib.py  types.py  ugrid.py  utils.py  validators.py
src/xpublish_tiles/cli/: bench.py  benchmark_common.py  main.py  titiler_bench.py
src/xpublish_tiles/plugins/: tiles.py  wms.py
src/xpublish_tiles/render/: __init__.py  error.py  mvt.py  polygons.py  pyvista.py  quiver.py  raster.py  vector.py
src/xpublish_tiles/routers/: tiles.py  wms.py  xyz.py
src/xpublish_tiles/testing/: datasets.py  lib.py  tiles.py
src/xpublish_tiles/testing/grids/: extract_n320.py  machias_bay_fvcom.nc  tripolar_hycom_lat_1d.csv  tripolar_hycom_lon_1d.csv
src/xpublish_tiles/xpublish/tiles/: metadata.py  models.py  plugin.py  tile_matrix.py  types.py
src/xpublish_tiles/xpublish/wms/: plugin.py  query.py  types.py  utils.py
tests/: README.md  __init__.py  conftest.py  datasets.py  test_arraylake.py  test_attributes_metadata.py  test_config.py  test_create_datasets.py  test_curvilinear_antimeridian.py  test_error_renderer.py  test_expressions.py  test_grids.py  test_lib.py  test_multiscale.py  test_pipeline.py  test_plugin.py  test_properties.py  test_smoke.py  test_utils.py  test_validators.py  test_vector.py  test_xyz_router.py  tiles.py
tests/__snapshots__/: test_pipeline.ambr
tests/test_plugins/: test_tiles.py  test_wms.py
tests/test_xpublish/: test_openapi.py
tests/test_xpublish/test_tiles/: test_metadata.py  test_models.py  test_plugin.py  test_precomputed_multiscale_tiles_plugin.py  test_tile_matrix.py  test_tile_query.py  test_tiles_metadata.py  test_tiles_plugin.py
tests/test_xpublish/test_tiles/__snapshots__/test_tiles_metadata/: test_tiles_endpoint_snapshot[cubed_sphere].json  test_tiles_endpoint_snapshot[era5].json  test_tiles_endpoint_snapshot[geostationary].json  test_tiles_endpoint_snapshot[geozarr_multiscale].json  test_tiles_endpoint_snapshot[global_healpix_l3].json  test_tiles_endpoint_snapshot[hrrr].json  test_tiles_endpoint_snapshot[ifs].json  test_tiles_endpoint_snapshot[regional_healpix_na].json  test_tileset_metadata_snapshot[hrrr].json  test_tileset_metadata_snapshot[regional_healpix_na].json
tests/test_xpublish/test_wms/: test_query.py  test_wms_attributes.py  test_wms_plugin.py  test_wms_query.py
(+3 files in other folders)
