[project]
name = "xpublish-tiles"
version = "0.1.0"
description = "Tiles router for xpublish"
readme = "README.md"
authors = [
    { name = "Matthew Iannucci", email = "matt@earthmover.io" },
    { name = "Deepak Cherian", email = "deepak@earthmover.io" },
    { name = "Tom Nicholas", email = "tom@earthmover.io" },
]
requires-python = ">=3.11"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
    "pytest-cov>=6.2.1",
    "ruff>=0.12.4",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
minversion = "7"
testpaths = ["tests", "integration_tests"]
log_cli_level = "INFO"
xfail_strict = true
addopts = ["-ra", "--strict-config", "--strict-markers"]
